ajuste en secante.h y creación de encontrar.cpp y encontrar.h para tener mejor control de los casos

--- a/raices_rguspian/Makefile
+++ b/raices_rguspian/Makefile
@@ -1,12 +1,14 @@
-all: main.o caso.o
-	g++ -o main main.o caso.o
+all: main.o caso.o encontrar.o
+	g++ -o main main.o caso.o encontrar.o
 
-main.o: main.cpp caso.h
+main.o: main.cpp caso.h 
 	g++ -c -o main.o main.cpp
 
-caso.o: caso.cpp caso.h biseccion.h tvi.h expression.h falsa.h newtonRapshon.h secante.h
+caso.o: caso.cpp caso.h encontrar.h
 	g++ -c -o caso.o caso.cpp
 
+encontrar.o: encontrar.cpp encontrar.h biseccion.h tvi.h expression.h encontrar.h falsa.h newtonRapshon.h secante.h 
+	g++ -c -o encontrar.o encontrar.cpp
 
 # Borra los archivos ejecutables y objetos
 clean:
