--- a/raices_rguspian/.vscode/settings.json
+++ b/raices_rguspian/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "ratio": "cpp",
-        "random": "cpp"
+        "random": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "ostream": "cpp"
     }
 }
